# ninesense.me

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  playwright.config.js
admin-app/: index.html  package-lock.json  package.json  vite.config.js
deploy/: backup-guestbook.sh  deploy-guestbook.sh  guestbook.env.example  ninesense-guestbook-backup.service  ninesense-guestbook-backup.timer  ninesense-guestbook.service  ninesense-nginx.conf  ninesense-rate-limit.conf  ninesense-site.conf
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_guestbook.py  0002_admin_foundation.py
server/src/ninesense_guestbook/: __init__.py  admin_models.py  app.py  cli.py  config.py  db.py  models.py
server/src/ninesense_guestbook/domain/: __init__.py  messages.py
server/src/ninesense_guestbook/services/: __init__.py  admin_notifications.py  audit.py  crypto.py  mfa.py  outbox.py  rate_limit.py  sessions.py
server/src/ninesense_guestbook/web/: __init__.py  admin.py  admin_dashboard.py  admin_security.py  auth.py  middleware.py  public.py  schemas.py
server/tests/: admin_test_helpers.py  conftest.py  test_admin_auth.py  test_admin_foundation_models.py  test_admin_notifications.py  test_admin_security.py  test_audit.py  test_cli.py  test_crypto.py  test_domain.py  test_health.py  test_mfa.py  test_migrations.py  test_models.py  test_moderation.py  test_outbox.py  test_public_feed.py  test_public_submit.py  test_rate_limit.py  test_recovery.py  test_security_regressions.py
site/: 404.html  DOMAIN-CHECKLIST.md  (+2 more)
(+38 files in other folders)
