[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ninesense-guestbook"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "pydantic-settings>=2.6,<3",
  "argon2-cffi>=23,<26",
  "cryptography>=43,<47",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
